# VoigtReussNet

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
data/: download_data.sh
data/Thermal2D_models/: vann_therm2D_20250121_202555.pt  vrnn_therm2D_norm_20250121_173200.pt
data/Thermal3D_models/: vann_therm3D_20250326_173149.pt  vrnn_therm3D_20250320_052451.pt  vrnn_therm3D_norm_20250320_052451.pth
data/Thermal3D_models/sweep_over_num_samples/: vann1per_therm3D_20250326_132331.pt  vann6per_therm3D_20250326_140227.pt  vann6per_therm3D_20250327_105128.pt  vrnn1per_therm3D_20250326_095659.pt  vrnn1per_therm3D_norm_20250326_095659.pth  vrnn6per_therm3D_20250326_150119.pt  vrnn6per_therm3D_20250326_202436.pt  vrnn6per_therm3D_20250327_083529.pt  vrnn6per_therm3D_norm_20250326_150119.pth  vrnn6per_therm3D_norm_20250326_202436.pth  vrnn6per_therm3D_norm_20250327_083529.pth
examples/Mechanical_2D/: retrain_vrnn_weights_mech2d.py  train_cholnn_mech2d.py  train_cholnn_weights_mech2d.py  train_vann_weights_mech2d.py  train_vrnn_descriptors_mech2d.py  train_vrnn_mech2d.py  train_vrnn_weights_mech2d.py
examples/Mechanical_3D/: train_cholnn_mech3d.py  train_isovann_mech3d.py  train_vann_mech3d.py  train_vrnn_mech3d.py
examples/Thermal_2D/: eval_therm2d.ipynb  inverse_design.ipynb  trainIm_vrnn_therm2d.py  train_vann_therm2d.py  train_vrnn_therm2d.py
examples/Thermal_3D/: compare_vrnn_models.ipynb  eval_therm3d.ipynb  train_vann_therm3d.py  train_vrnn_therm3d.py
vrnn/: base.py  data_mechanical.py  data_thermal.py  losses.py  models.py  normalization.py  tensortools.py  transformations.py  utils.py
