[project]
name            = "vrnn"
version         = "0.1.0"
description     = "Surrogates for microstructure–property linkages that inherently fulfill the Voigt-Reuss bounds."
readme          = "README.md"
requires-python = ">=3.12"
license         = {text = "LGPL-3.0"}

authors = [
  {name = "Sanath Keshav", email = "keshav@mib.uni-stuttgart.de"},
]

keywords    = ["Constitutive modeling", "Composite materials", "Multiscale modeling", "Microstructure homogenization", "Neural networks", "Structure-property linkage", "Voigt-Reuss net", "Physics-constrained ML"]
classifiers = [
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[dependencies]
python = ">=3.12"

[project.urls]
Homepage   = "https://www.mib.uni-stuttgart.de/dae/"
Repository = "https://github.com/DataAnalyticsEngineering/VoigtReussNet"
Issues     = "https://github.com/DataAnalyticsEngineering/VoigtReussNet/issues"

[build-system]
requires      = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["vrnn", "README.md", "LICENSE"]


###############################################################################
# Pixi environment
###############################################################################
[tool.pixi.workspace]
name      = "vrnn"
channels  = ["conda-forge"]
platforms = ["linux-64", "win-64", "linux-aarch64"]

[tool.pixi.system-requirements]
cuda = "12.8"

[tool.pixi.dependencies]
numpy = "*"
h5py = "*"
matplotlib = "*"
torchinfo = "*"
torchvision = "*"
ipykernel = "*"
scipy = "*"
scikit-learn = "*"
pytorch-gpu = "*"
pandas = "*"
openpyxl = "*"
scikit-image = "*"

[tool.pixi.pypi-dependencies]
vrnn = { path = ".", editable = true }
homopy = ">=1.1.0, <2"
